# dutwitter

./: .gitignore  README.md  manage.py  pyproject.toml  todo.md
dutwitter_config/: asgi.py  settings.py  urls.py  wsgi.py
tweets/: models.py  views.py
tweets/migrations/: 0001_initial.py
