[tool.poetry]
name = "dutwitter"
version = "0.1.0"
description = "Twitter clone with Python and JavaScript"
authors = ["Joseph Dubon <josephdubon@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Django = "^3.1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
